--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/KK.png
+    - assets/broom.png
+    - assets/house.png
+    - assets/offices.png
+    - assets/vacuum.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,10 +78,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: ubuntu
-      fonts:
-        - asset: fonts/assets/Ubuntu-Regular.ttf
+  # fonts:
+  #   - family: ubuntu
+  #     fonts:
+  #       - asset: fonts/assets/Ubuntu-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
