--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,22 +6,25 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ">=2.15.1 <3.0.0"
 
 
 dependencies:
   flutter:
     sdk: flutter
-  table_calendar: ^3.0.3
-  
+
+  google_maps_flutter: ^2.1.2
   animated_splash_screen: ^1.2.0
   flutter_map: any
-  latlong: ^0.6.1
-  latlong2: ^0.8.1
+
 
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   flutter_svg: ^0.19.0
+  firebase_core: ^1.13.1
+  firebase_auth: ^3.3.11
+  table_calendar: ^3.0.4
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
@@ -34,7 +37,6 @@ flutter:
   uses-material-design: true
   
   assets:
-    - assets/
     - assets/icons/
 
 fonts:
