--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_auth: ^3.3.11
   table_calendar: ^3.0.4
   cloud_firestore: ^3.1.10
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
