--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  google_maps_flutter: ^2.1.2
   animated_splash_screen: ^1.2.0
   flutter_map: any
 
@@ -27,6 +26,9 @@ dependencies:
   cloud_firestore: ^3.1.10
   fluttertoast: ^8.0.9
 
+  #format date and time
+  intl: ^0.17.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -39,6 +41,7 @@ flutter:
   
   assets:
     - assets/icons/
+    - assets/images/
 
 fonts:
   - family: ubuntu
