--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,13 @@ dependencies:
   table_calendar: ^3.0.4
   cloud_firestore: ^3.1.10
   fluttertoast: ^8.0.9
+  flutter_stripe: ^2.4.0
+  get: ^4.6.1
 
   #format date and time
   intl: ^0.17.0
   google_maps_flutter: ^2.1.3
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
