--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_map: any
 
 
+  email_validator: ^2.0.1
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   flutter_svg: ^0.19.0
