--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
 
   email_validator: ^2.0.1
+  flutter_rating_bar: ^4.0.0
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   flutter_svg: ^0.19.0
@@ -26,8 +27,8 @@ dependencies:
   table_calendar: ^3.0.4
   cloud_firestore: ^3.1.10
   fluttertoast: ^8.0.9
-  flutter_stripe: ^2.4.0
-  get: ^4.6.1
+  flutter_stripe: ^2.5.0
+  get: 4.6.1
 
   #format date and time
   intl: ^0.17.0
