--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,9 @@ dependencies:
   animated_splash_screen: ^1.2.0
   flutter_map: any
 
-
+  animated_text_kit: ^4.2.1
+  animated_textformfields: ^1.0.1
+  flutter_animated_button: ^2.0.0
   email_validator: ^2.0.1
   flutter_rating_bar: ^4.0.0
   cupertino_icons: ^1.0.2
